2. Fix layout issues

--- a/0x03-responsive_design/02-1-styles.css
+++ b/0x03-responsive_design/02-1-styles.css
@@ -185,6 +185,11 @@ a:active {
   white-space: nowrap;
 }
 
+main img {
+  width: 100%;
+  height: auto;
+}
+
 /*** 2. LAYOUT ***/
 
 /* Layout
@@ -221,6 +226,25 @@ ul.row {
   width: calc((100% / 2) - 2rem);
 }
 
+@media only screen and (max-width: 767px) {
+  :root {
+    --section-padding: 5rem 1.5rem;
+    --section-body-padding: 2rem 0 0;
+  }
+  
+  ul.row, .row {
+    flex-direction: column;
+    margin: 0
+  }
+
+  [class*="col-"] {
+    margin: 0 0 3rem 0;
+  }
+
+  .col-1-3, .col-1-2 {
+    width: 100%;
+  }
+}
 /* Navbar
       ============================= */
 
@@ -268,6 +292,12 @@ ul.row {
 .nav .nav-item:hover .nav-link::before {
   background-color: var(--color-primary);
   width: 100%;
+}
+
+@media only screen and (max-width: 767px) {
+  .navbar-menu {
+    display: none;
+  }
 }
 
 /* Header
@@ -406,6 +436,12 @@ ul.row {
 
 .section-latest-news .row {
   flex-direction: row-reverse;
+}
+
+@media screen and (max-width: 767px) {
+  .section-latest-news .row{
+    flex-direction: column;
+  }
 }
 
 /* Section SERVICES
@@ -867,3 +903,4 @@ textarea:valid:not(:placeholder-shown) {
   cursor: text;
   margin: 0 1rem;
 }
+
